# TCPP_project_Moneybeast

./: .gitignore  CMakeLists.txt  README.md  application.cxx  main.cxx  mbsystem.cxx  mbtypes.cxx
include/: application.hxx  main.hxx  mbsystem.hxx  mbtypes.hxx
